--- a/UrbanAirshipPlugin/res/layout/landing_page.xml
+++ b/UrbanAirshipPlugin/res/layout/landing_page.xml
@@ -20,6 +20,7 @@
     </LinearLayout>
    	    
     <FrameLayout
+        android:id="@+id/ua_content_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/date_time_container"
@@ -28,7 +29,7 @@
 
         <!-- Layout must contain a LandingPageWebView with id @android:id/primary -->
 
-        <com.urbanairship.widget.LandingPageWebView
+        <com.urbanairship.widget.UAWebView
             android:id="@android:id/primary"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
